--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,52 +15,53 @@
     <title>나만의 셀렉샵</title>
 </head>
 <body>
-<div class="header" style="position:relative;">
-    <div id="header-title-login-user">
-        <span th:text="${nickname}"></span> 님의
-    </div>
-    <div id="header-title-select-shop">
-        Select Shop
-    </div>
+    <div class="header" style="position:relative;">
+        <div id="header-title-login-user">
+            <span th:text="${nickname}"></span> 님의
+        </div>
+        <div id="header-title-select-shop">
+            Select Shop
+        </div>
 
-    <form id="my_form" method="post" action="/user/logout">
-        <a id="logout-text" href="javascript:{}" onclick="document.getElementById('my_form').submit();">로그아웃</a>
-    </form>
-</div>
-<div class="nav">
-    <div class="nav-see active">
-        모아보기
+        <form id="my_form" method="post" action="/user/logout">
+            <a id="logout-text" href="javascript:{}" onclick="document.getElementById('my_form').submit();">로그아웃</a>
+        </form>
     </div>
-    <div class="nav-search">
-        탐색하기
-    </div>
-</div>
-<div id="see-area">
-    <div id="product-container">
-
-    </div>
-</div>
-<div id="search-area">
-    <div>
-        <input type="text" id="query">
-        <!--    <img src="images/icon-search.png" alt="">-->
-    </div>
-    <div id="search-result-box">
-
-    </div>
-    <div id="container" class="popup-container">
-        <div class="popup">
-            <button id="close" class="close">
-                X
-            </button>
-            <h1>⏰최저가 설정하기</h1>
-            <p>최저가를 설정해두면 선택하신 상품의 최저가가 떴을 때<br/> 표시해드려요!</p>
-            <div>
-                <input type="text" id="myprice" placeholder="200,000">원
-            </div>
-            <button class="cta" onclick="setMyprice()">설정하기</button>
+    <div class="nav">
+        <div class="nav-see active">
+            모아보기
+        </div>
+        <div class="nav-search">
+            탐색하기
         </div>
     </div>
-</div>
+    <div id="see-area">
+        <div id="product-container">
+
+        </div>
+    </div>
+    <div id="search-area">
+        <div>
+            <input type="text" id="query">
+            <!--    <img src="images/icon-search.png" alt="">-->
+        </div>
+        <div id="search-result-box">
+
+        </div>
+        <div id="container" class="popup-container">
+            <div class="popup">
+                <button id="close" class="close">
+                    X
+                </button>
+                <h1>⏰최저가 설정하기</h1>
+                <p>최저가를 설정해두면 선택하신 상품의 최저가가 떴을 때<br/> 표시해드려요!</p>
+                <div>
+                    <input type="text" id="myprice" placeholder="200,000">원
+                </div>
+                <button class="cta" onclick="setMyprice()">설정하기</button>
+            </div>
+        </div>
+    </div>
+    <div th:if="${admin_role}" id="admin"></div>
 </body>
 </html>
